<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical">
    <com.example.android.camera2basic.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        />

    <RelativeLayout

        android:id="@+id/panel_base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <FrameLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageButton
                android:id="@+id/exposure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:contentDescription="@string/expose"
                app:srcCompat="@drawable/ic_exposure" />

            <ImageButton
                android:id="@+id/iso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/iso"
                app:srcCompat="@drawable/ic_iso" />

            <ImageButton
                android:id="@+id/autoWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:background="@android:color/transparent"
                android:contentDescription="@string/autoWhite"
                app:srcCompat="@drawable/ic_white_balance" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/control"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:background="#AD000000"
            android:foreground="@android:color/transparent">

            <Button
                android:id="@+id/picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/picture" />

            <ImageButton
                android:id="@+id/flip_cam"
                android:layout_width="104dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/description_info"
                android:padding="20dp"
                app:srcCompat="@drawable/ic_flip_cam" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/portrait"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/portrait"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/video"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/photo"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/square"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/square"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/more_mode"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </HorizontalScrollView>

        </FrameLayout>


    </RelativeLayout>


</RelativeLayout>
